Fix Premium page scaling on mobile screens [MAILPOET-1001]

--- a/assets/css/src/pages.styl
+++ b/assets/css/src/pages.styl
@@ -2,6 +2,7 @@
 Based on /wp-admin/css/about.css of WP 4.7.
 This is to make MailPoet pages independent of the WordPress
 About page styles that may differ across WP versions.
+Please add custom styles to pages_custom.styl
 */
 
 .mailpoet-about-wrap
@@ -119,13 +120,11 @@ About page styles that may differ across WP versions.
 
   .feature-section
     &.one-col
-      width: 700px
       margin: 0 auto
       text-align: center
       & > a.button
         margin-top: 2em
     &.one-col-left
-      width: 700px
       margin: 0 auto
     h2.mailpoet-feature-top
       margin: 50px auto
